package app.domain.model;
public class Receptionist extends Employee{

    public Receptionist(String roleId, String name, String address, String phoneNumber, String email, String socCode) {
        super(roleId, name, address, phoneNumber, email, socCode);
    }

}
